feat(service.spotPriceParser): add service to parse spot price data
changed jest maxworkers to 4
