# src/infrastructure/server/server.openapi.yaml
@@ -51,7 +51,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           description: unexpected internal error occured
-  /test:
+  /spotPrice:
     get:
       x-eov-operation-handler: spotPrice/route.spotPrice
       operationId: getTest
@@ -80,40 +80,6 @@ paths:
           $ref: '#/components/responses/ValidationFailure'
         '404':
           $ref: '#/components/responses/NotFound'
-        '401':
-          $ref: '#/components/responses/AuthorizationFailure'
-        '403':
-          $ref: '#/components/responses/AccessForbiddenFailure'
-        '500':
-          description: unexpected internal error occured
-    post:
-      x-eov-operation-handler: spotPrice/route.spotPrice
-      operationId: postTest
-      tags:
-        - private
-        - test
-      description: post a new test
-      requestBody:
-        $ref: '#/components/requestBodies/PostTest'
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  data:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/TApiTest'
-        
-        '400':
-          $ref: '#/components/responses/ValidationFailure'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '403':
-          $ref: '#/components/responses/AuthorizationFailure'
         '500':
           description: unexpected internal error occured
 
@@ -213,16 +179,6 @@ components:
       required:
         - name
         - description
-
-  requestBodies:
-    PostTest:
-      description: create a new test
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/TCreateApiTest'
       
   responses:
         NotFound:
@@ -243,28 +199,7 @@ components:
                     $ref: '#/components/schemas/ErrorList'
                   example:
                       - errors:
-                          error: "item does not exist"
-
-        AccessForbiddenFailure:
-          description: Request failed because of insufficient access rights
-          content:
-                application/json:
-                  schema:
-                    $ref: '#/components/schemas/ErrorList'
-                  example:
-                    - errors:
-                        error: "Invalid token provided"
-
-        AuthorizationFailure:
-          description: Request failed with non valid authentication data provided
-          content:
-                application/json:
-                  schema:
-                    $ref: '#/components/schemas/ErrorList'
-                  example:
-                    - errors:
-                        error: "Invalid token provided"
-                        
+                          error: "item does not exist"                        
   
   securitySchemes:
     bearerAuth:            # arbitrary name for the security scheme
