# src/lib/types/types.ts
@@ -1,7 +1,15 @@
 import { components } from './generated'
+import Decimal from 'decimal.js'
 
-export type TApiTestDbo = components['schemas']['TApiTest'] & { id: number }
-export type TApiTest = components['schemas']['TApiTest']
+export interface TCreateSpotPriceDbo {
+  price: Decimal
+  timestamp: Date
+}
+export interface TSpotPriceDbo {
+  id: number
+  price: Decimal
+  timestamp: Date
+}
 export type TCreateApiTest = components['schemas']['TCreateApiTest']
 export type TCreateApiTestDbo = components['schemas']['TCreateApiTest']
 export type TApiError = components['schemas']['Error']
